--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>Interested in coding to level up professionally as a pen tester. Inquisitive, eager life-long learner. Excited about the possibilities...</p>
+<p>Interested in coding to level up professionally as a pen tester. Inquisitive, life-long learner. Excited about the possibilities...</p>
